--- a/text-formatting.html
+++ b/text-formatting.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="what-is-html.html"><strong aria-hidden="true">1.</strong> What is HTML?</a></li><li class="chapter-item expanded "><a href="html-document.html"><strong aria-hidden="true">2.</strong> HTML Document</a></li><li class="chapter-item expanded "><a href="headings-and-paragraph.html"><strong aria-hidden="true">3.</strong> Heading and Paragraph</a></li><li class="chapter-item expanded "><a href="attributes-and-values.html"><strong aria-hidden="true">4.</strong> Attributes and Values</a></li><li class="chapter-item expanded "><a href="text-formatting.html" class="active"><strong aria-hidden="true">5.</strong> Text Formatting</a></li><li class="chapter-item expanded "><a href="anchor-link.html"><strong aria-hidden="true">6.</strong> Anchor Link</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="what-is-html.html"><strong aria-hidden="true">1.</strong> What is HTML?</a></li><li class="chapter-item expanded "><a href="html-document.html"><strong aria-hidden="true">2.</strong> HTML Document</a></li><li class="chapter-item expanded "><a href="headings-and-paragraph.html"><strong aria-hidden="true">3.</strong> Heading and Paragraph</a></li><li class="chapter-item expanded "><a href="attributes-and-values.html"><strong aria-hidden="true">4.</strong> Attributes and Values</a></li><li class="chapter-item expanded "><a href="text-formatting.html" class="active"><strong aria-hidden="true">5.</strong> Text Formatting</a></li><li class="chapter-item expanded "><a href="anchor-link.html"><strong aria-hidden="true">6.</strong> Anchor Link</a></li><li class="chapter-item expanded "><a href="table.html"><strong aria-hidden="true">7.</strong> Table</a></li><li class="chapter-item expanded "><a href="list.html"><strong aria-hidden="true">8.</strong> List</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -213,7 +213,8 @@
 <p>Subscript ကိုဓာတုဗေဒညီမျှခြင်းများရေးသားတဲ့အခါသုံးလေ့ရှိပါတယ်။</p>
 <pre><code class="language-html">H&lt;sub&gt;2&lt;/sub&gt;O
 </code></pre>
-<h2 id="superscript-ကိုတောထပကိနးများတငသညအခါသုံးလေရှိပါတယ"><a class="header" href="#superscript-ကိုတောထပကိနးများတငသညအခါသုံးလေရှိပါတယ">Superscript ကိုတော့ထပ်ကိန်းများတင်သည့်အခါသုံးလေ့ရှိပါတယ်။</a></h2>
+<h2 id="superscript"><a class="header" href="#superscript">Superscript</a></h2>
+<p>Superscript ကိုတော့ထပ်ကိန်းများတင်သည့်အခါသုံးလေ့ရှိပါတယ်။</p>
 <pre><code class="language-html">x&lt;sup&gt;2&lt;/sup&gt;
 </code></pre>
 
