deploy: 8edd40dcefe65a7a119ee992b4b353111af45681

--- a/print.html
+++ b/print.html
@@ -821,6 +821,78 @@ Radio Type မှာ Name ထည့်ရသလိုကျန်တဲ့ Input
   scheme                    path
 </code></pre>
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="final-project-source-code"><a class="header" href="#final-project-source-code">Final Project Source Code</a></h1>
+<pre><code class="language-html">&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;en&quot;&gt;
+&lt;head&gt;
+  &lt;meta charset=&quot;UTF-8&quot;&gt;
+  &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+  &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;ie=edge&quot;&gt;
+  &lt;title&gt;HTML Simple Project&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+
+  &lt;table border=&quot;1&quot; width=&quot;100%&quot;&gt;
+    &lt;!-- Heading --&gt;
+    &lt;tr&gt;
+      &lt;td&gt;Advertisement Here!&lt;/td&gt;
+      &lt;td&gt;
+        &lt;h1&gt;Simple HTML Website&lt;/h1&gt;
+      &lt;/td&gt;
+      &lt;td&gt;Advertisement Here!&lt;/td&gt;
+    &lt;/tr&gt;
+    &lt;!-- Body --&gt;
+    &lt;tr height=&quot;80%&quot;&gt;
+      &lt;td&gt;
+        &lt;a href=&quot;#&quot;&gt;Link 1&lt;/a&gt;&lt;br&gt;
+        &lt;a href=&quot;#&quot;&gt;Link 2&lt;/a&gt;&lt;br&gt;
+        &lt;a href=&quot;#&quot;&gt;Link 3&lt;/a&gt;&lt;br&gt;
+      &lt;/td&gt;
+
+      &lt;td&gt;
+        &lt;pre&gt;
+          by Manuel Gutiérrez Nájera
+
+          I want to die as the day declines,
+          at high sea and facing the sky,
+          while agony seems like a dream
+          and my soul like a bird that can fly.
+
+          To hear not, at this last moment,
+          once alone with sky and sea,
+          any more voices nor weeping prayers
+          than the majestic beating of the waves.
+
+          To die when the sad light retires
+          its golden network from the green waves
+          to be like the sun that slowly expires;
+          something very luminous that fades.
+
+          To die, and die young, before
+          fleeting time removes the gentle crown,
+          while life still says: &quot;I'm yours&quot;
+          though we know with our hearts that she lies.
+        &lt;/pre&gt;
+      &lt;/td&gt;
+      &lt;td&gt;
+        &lt;a href=&quot;https://google.com&quot;&gt;Google&lt;/a&gt;&lt;br&gt;
+        &lt;a href=&quot;https://fb.com&quot;&gt;Facebook&lt;/a&gt;&lt;br&gt;
+        &lt;a href=&quot;https://slack.com&quot;&gt;Slack&lt;/a&gt;&lt;br&gt;
+      &lt;/td&gt;
+    &lt;/tr&gt;
+    &lt;!-- Footer --&gt;
+    &lt;tr&gt;
+      &lt;td colspan=&quot;3&quot;&gt;
+        &lt;marquee&gt;&amp;copy;2021-2022 By Programming 101.&lt;/marquee&gt;
+
+      &lt;/td&gt;
+    &lt;/tr&gt;
+
+
+  &lt;/table&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
 
                     </main>
 
